# besu-native

./: .gitignore  .gitmodules  CHANGELOG.md  MAINTAINERS.md  README.md  RELEASE.md  build.gradle  build.sh  gradle.properties  native-build.sh  settings.gradle
.circleci/: config.yml
.github/workflow/: repolint.yml
.github/workflows/: build.yml  codeql.yml  exploit.yaml  repolinter.yml
altbn128/: build.gradle
altbn128/sputnikvm_altbn128/: Cargo.toml
altbn128/sputnikvm_altbn128/src/: lib.rs  lib.rs.orig
altbn128/src/main/java/org/hyperledger/besu/nativelib/altbn128/: LibAltbn128.java
arithmetic/: build.gradle
arithmetic/arithmetic/: Cargo.toml  README.md
arithmetic/arithmetic/src/: arith.rs  lib.rs  mpnat.rs
arithmetic/src/main/java/org/hyperledger/besu/nativelib/arithmetic/: LibArithmetic.java
arithmetic/src/test/java/org/hyperledger/besu/nativelib/arithmetic/: TestLibArithmetic.java
blake2bf/: build.gradle
blake2bf/aarch64/: blake2-impl.h  blake2.h  blake2b-load-neon.h  blake2b-round.h  blake2b.c  makefile
blake2bf/src/main/java/org/hyperledger/besu/nativelib/blake2bf/: LibBlake2bf.java
blake2bf/src/test/java/org/hyperledger/besu/nativelib/blake2bf/: LibBlake2bfTest.java
blake2bf/sse/: blake2b-load-sse2.h
blake2bf/x86_64/: blake2-config.h  blake2.h  blake2b-load-sse41.h  blake2b-round.h  blake2b.c  makefile
bls12-381/: build.gradle
bls12-381/src/main/java/org/hyperledger/besu/nativelib/bls12_381/: LibEthPairings.java
bls12-381/src/test/java/org/hyperledger/besu/nativelib/bls12_381/: AltBN128G1AddPrecompiledContractTest.java  AltBN128G1MulPrecompiledContractTest.java  AltBN128PairingPrecompiledContractTest.java  AltBN128PairingPrecompiledContractTestLegacy.java  BLS12G1AddPrecompiledContractTest.java  BLS12G1MulPrecompiledContractTest.java  BLS12G1MultiExpPrecompiledContractTest.java  BLS12G2AddPrecompiledContractTest.java  BLS12G2MulPrecompiledContractTest.java  BLS12G2MultiExpPrecompiledContractTest.java  BLS12MapFp2ToG2PrecompiledContractTest.java  BLS12MapFpToG1PrecompiledContractTest.java  BLS12PairingPrecompiledContractTest.java
bls12-381/src/test/resources/org/hyperledger/besu/nativelib/bls12_381/: eip196_g1_add.csv  eip196_g1_mul.csv  fp_to_g1.csv  g1_add.csv  g1_mul.csv  g2_add.csv  g2_multiexp.csv
blst/: build.gradle
blst/src/main/java/org/hyperledger/besu/nativelib/blst/: Bls12381.java
blst/src/test/java/org/hyperledger/besu/nativelib/blst/: BLS12Fp2ToG2PrecompiledContractTest.java  BLS12FpToG1PrecompiledContractTest.java  BLS12G1AddPrecompiledContractTest.java  BLS12G1MulPrecompiledContractTest.java  BLS12G1MultiExpPrecompiledContractTest.java  BLS12G2AddPrecompiledContractTest.java  BLS12G2MulPrecompiledContractTest.java  BLS12G2MultiExpPrecompiledContractTest.java  BLS12PairingPrecompiledContractTest.java
blst/src/test/resources/org/hyperledger/besu/nativelib/blst/: fp2_to_g2.csv  fp_to_g1.csv  g1_add.csv  g1_mul.csv  g1_multiexp.csv  g2_add.csv  g2_mul.csv  g2_multiexp.csv  invalid_subgroup_for_pairing.csv  pairing.csv
boringssl/: build.gradle
boringssl/boringssl_jni/: Makefile  ecrecover.c  ecrecover.h  p256_verify.c  p256_verify.h
boringssl/src/main/java/org/hyperledger/besu/nativelib/boringssl/: BoringSSLPrecompiles.java  BoringSSLPrecompilesCommon.java  BoringSSLPrecompilesGraal.java  LibP256Verify.java  LibP256VerifyJNA.java
boringssl/src/test/java/org/hyperledger/besu/nativelib/boringssl/: P256EdgeCaseTest.java  P256VerifyParameterizedTest.java  P256VerifyTest.java  SecP256R1EcrecoverParameterizedTest.java  SecP256R1EcrecoverTest.java  SecP256R1ParameterizedTest.java  SecP256R1Test.java
boringssl/src/test/resources/org/hyperledger/besu/nativelib/boringssl/: p256_verify.csv  secp256r1ecrecover.csv
common/: build.gradle
common/src/main/java/org/hyperledger/besu/nativelib/common/: BesuNativeLibraryLoader.java
compress/: build.gradle
compress/compress-jni/: compress-jni.go  go.mod  go.sum
compress/src/main/java/org/hyperledger/besu/nativelib/compress/: LibCompress.java
compress/src/test/java/org/hyperledger/besu/nativelib/compress/: LibCompressTest.java
constantine/: build.gradle  constantine_eip196_bindings.nim  ethereum_evm_precompiles.c  ethereum_evm_precompiles.h  jna_ethereum_evm_precompiles.c  jna_ethereum_evm_precompiles.h
constantine/constantine-jni/lib/: libconstantine.a.arm  libconstantine.a.x64  libconstantine.dylib.arm  libconstantine.dylib.x64
constantine/constantine-jni/src/main/c/: ethereum_evm_precompiles.c
constantine/constantine/constantine/: ethereum_verkle_ipa.nim
constantine/constantine/constantine/commitments/: eth_verkle_ipa.nim
constantine/constantine/include/constantine/protocols/: ethereum_verkle_ipa.h
constantine/constantine/lib/: libconstantine.a.arm  libconstantine.dylib.arm  libconstantine.dylib.x64
constantine/src/main/java/org/hyperledger/besu/nativelib/constantine/: LibConstantineEIP196.java  LibConstantineEIP2537.java  LibConstantineVerkle.java  (+1 more)
constantine/src/test/resources/: g1_mul.csv  g1_multiexp.csv  g2_add.csv  g2_multiexp.csv  invalid_pairing.csv  pairing.csv
gnark/: build.gradle
gnark/gnark-jni/: README.md  gnark-eip-196.go  gnark-eip-2537.go  gnark-jni.go  gnark-test-data.go  go.mod  go.sum
ipa-multipoint/: build.gradle
ipa-multipoint/ipa_multipoint_jni/: Cargo.toml
ipa-multipoint/ipa_multipoint_jni/src/: bytes.rs  commit.rs  context.rs  convert.rs  decoding.rs  encoding.rs  lib.rs  map.rs  parsers.rs  traits.rs  types.rs  update.rs  utils.rs
ipa-multipoint/src/test/resources/: genesis_lvl1_commits.json  invalid_block_72.json  invalid_block_73.json  pedersen_commitment_test.json  valid_block_1.json  valid_block_72.json
keccak/: build.gradle
keccak-2/: build.gradle
keccak-2/wrapper/: CMakeLists.txt  keccak256.c  keccak256.h
keccak/keccak-jni/: Cargo.toml
keccak/keccak-jni/src/: lib.rs
mimc/: build.gradle
mimc/mimc-jni/: Cargo.toml  go.mod  mimc-jni.go
mimc/mimc-jni/src/: lib.rs
secp256k1/: build.gradle
secp256k1/secp256k1_jni/: Makefile  secp256k1_ecrecover.c  secp256k1_ecrecover.h
secp256r1/: build.gradle
(+86 files in other folders)
