[package]
name = "besu-native-bn128"
version = "0.11.0"
description = "bn128 precompiled contracts for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>", "Danno Ferrin <danno.ferrin@shemnon.com>"]
repository = "https://github.com/hyperledger/besu-native"
edition = "2018"

[dependencies]
ethereum-bigint = { version = "0.2", default-features = false }
bn-plus = { version = "0.4.4" }
libc = "0.2"

[lib]
name = "eth_altbn128"
crate-type = ["cdylib"]

[features]
default = []
