[package]
name = "besu-native-arithmetic"
version = "0.11.0"
description = "Native arithemetic for EVM."
license = "Apache-2.0"
authors = ["Danno Ferrin <danno.ferrin@shemnon.com>"]
repository = "https://github.com/hyperledger/besu-native"
edition = "2021"

[dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.15"
libc = "0.2"

[lib]
name = "eth_arithmetic"
crate-type = ["cdylib"]

[features]
default = []
