[package]
name = "besu-native-arithmetic"
version = "0.11.0"
description = """Native arithemetic for EVM.
Derived from aurora - https://github.com/aurora-is-near/aurora-engine/tree/0cfda4686dbdb7a57b2dc18dddc5106ec8e24a38/engine-modexp - originally CC0-1.0 license."""
license = "Apache-2.0"
authors = ["Aurora Labs <hello@aurora.dev>", "Danno Ferrin <danno.ferrin@shemnon.com>"]
repository = "https://github.com/hyperledger/besu-native"
edition = "2021"

[dependencies]
ibig = { version = "0.3.6", default-features = false, features = ["num-traits"], optional = true }
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
libc = "0.2"

[lib]
name = "eth_arithmetic"
crate-type = ["cdylib"]

[features]
default = []
