# SPDX-License-Identifier: Apache-2.0

[package]
name = "ipa_multipoint_jni"
version = "0.1.0"
description = "IPA Multipoint Crypto Library"
license = "Apache-2.0"
authors = ["Antoine Toulme <antoine@lunar-ocean.com>"]
repository = "https://github.com/hyperledger/besu-native"
edition = "2018"

[dependencies]
ipa-multipoint = { path = "../ipa_multipoint" }
bandersnatch = "0.1.1"
jni = { version = "0.19.0", features = ["invocation"] } # We use invocation in tests.
rand_chacha = "0.3.1"
rand_core = "0.6.3"
rand = "0.8.5"
ark-ff = "0.3.0"
hex = "0.4.3"

[lib]
name = "ipa_multipoint_jni"
crate-type = ["cdylib"]