#
# Copyright Besu Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ipa_multipoint_jni"
version = "0.1.1"
description = "JNI for Besu Verkle Tries"
license = "Apache-2.0"
authors = ["Dragan Pilipovic", "Thomas Zamojski <thomas.zamojski@quadratic-labs.com>"]
repository = "https://github.com/hyperledger/besu-native/ipa-mulitpoint"
edition = "2021"

[dependencies]
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ff = { version = "^0.4.2", default-features = false }
banderwagon = { git = "https://github.com/crate-crypto/rust-verkle", rev = "bb5af2f2fe9788d49d2896b9614a3125f8227818" }
ipa-multipoint = { git = "https://github.com/crate-crypto/rust-verkle", rev = "bb5af2f2fe9788d49d2896b9614a3125f8227818" }
once_cell = "1.19.0"
jni = { version = "0.19.0", features = ["invocation"] } # We use invocation in tests.

[lib]
name = "ipa_multipoint_jni"
crate-type = ["cdylib"]
