#
# Copyright Besu Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "keccak_jni"
version = "0.1.0"
description = "Keccak Library"
license = "Apache-2.0"
authors = ["Karim Taam <kt2am@gmail.com>"]
repository = "https://github.com/hyperledger/besu-native"

[dependencies]
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
jni = { version = "0.19.0", features = ["invocation"] } # We use invocation in tests.
backtrace = "0.3"

[lib]
name = "keccak_jni"
crate-type = ["cdylib"]
